Adding some draft news summaries by  Leo/Llama 3.1 8B

--- a/2025/2025-05-18-wir.md
+++ b/2025/2025-05-18-wir.md
@@ -33,9 +33,11 @@
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- **Coinbase replaced Discover in the S&P 500.** <!-- Link TK -->
+- The US Copyright Office has released a pre-publication report challenging the idea that all AI training on copyrighted works should be considered fair use, citing concerns about market disruption and potential harm to creators. The report, which has sparked controversy in the tech industry, suggests that some AI training may be deemed fair use, but only if it is transformative and does not compete with original creative works. ([Ars Technica](https://arstechnica.com/tech-policy/2025/05/copyright-office-head-fired-after-reporting-ai-training-isnt-always-fair-use/)) <!-- Drafted by Leo/Llama 3.1 8B. Could potentially flesh this one out as lead item for the newsletter -->
 
-- **U.S. copyright office chief fired.** <!-- Link TK. A possible candidate for lead item tk, as this story appears to have an AI angle. -->
+- eToro, a fintech company and digital trading platform, has made its highly anticipated Nasdaq debut with its shares trading under the ticker "ETOR" at a price of $52 per share. The company's IPO raised around $310 million, valuing eToro at approximately $4.2 billion, after initially planning to sell shares between $46 and $50 apiece. ([Fast Company](https://www.fastcompany.com/91334282/etoro-ipo-stock-price-today-brokerage-nasdaq-trading-debut-etor)) <!-- Drafted by Leo/Llama 3.1 8B-->
+
+- **Coinbase replaced Discover in the S&P 500.** <!-- Link TK -->
 
 - New bitcoin ATH? <!-- A possibility this week-->
 
@@ -43,21 +45,25 @@
 
 - Robinhood buying Wonderfi <!-- Link TK -->
 
+- Alexander Mashinsky, the former CEO of Celsius Network, has been sentenced to 12 years in prison for his role in a cryptocurrency fraud scheme that saw him make $48 million by manipulating the price of Celsius' proprietary token and selling his own tokens at inflated prices. His scheme, which involved using slogans like "Unbank Yourself" to persuade customers to invest, ultimately led to Celsius filing for bankruptcy in 2022 with around $25 billion in assets. ([Salon](https://www.salon.com/2025/05/09/celsius-ceo-alex-mashinsky-gets-12-years-in-crypto-fraud-case/?in_brief=true)) <!-- Drafted by Leo/Llama 3.1 8B-->
+
+### Markets
+
+<!-- TKTK -->
+
 ### Looking Ahead
 
 - Trump memecoin dinner set for May 22.
 
 - TK
 
-- TK
+- Politico: China is more popular from the U.S. in global polling for the first time. <!-- Link TK -->
 
 ### Odds & Ends
 
 - A podcast episode by a16z crypto explores a new framework for understanding tokens, discussing their types, design, uses, and the evolving landscape of crypto assets. ([source](https://web3-with-a16z.simplecast.com/episodes/token-guide-crypto-JUFDm_Sn)) <!-- Draft summary by ChatGPT -->
 
-- Politico: China is more popular from the U.S. in global polling for the first time. <!-- Link TK -->
-
-- TKTK
+- As researchers develop more advanced biohybrid robots, also known as cyborgs, by merging living organisms with mechanical parts, concerns are rising about the ethics of using animals for human purposes. With the possibility of creating tiny flying drones or robots that mimic insects, the question of whether we have the right to control and modify living creatures for our benefit, especially when they may be capable of feeling pain or having preferences, is becoming increasingly important. ([Salon](https://www.salon.com/2025/05/13/we-can-turn-bugs-into-flying-crawling-robocops-does-that-mean-we-should/)) <!-- Drafted by Leo/Llama 3.1 8B-->
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
