Creating new "market snapshot" section

--- a/2025/2025-05-25-wir.md
+++ b/2025/2025-05-25-wir.md
@@ -27,29 +27,32 @@
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- TK
-- TK
-- TK
-- TK
+- Coinbase "reversed" a bounty on hackers seeking user data.
+
 - TK
 
-### Market Scorecard
+- TK
 
-<!--
+- TK
 
-https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing
+- TK
 
-S&P 500
-Nasdaq 100
-USD Index
-BTC
-Gold
-US 10-yr Yield
+### Market Snapshot
 
--->
+*A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, see the spreadsheet I use [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
+
+| Indicator     | Close         |  Weekly %     |  YTD %       
+| ------------- | ------------- | ------------- | ------------- |
+| Bitcoin       | TK | ------------- | ------------- |
+| Nasdaq 100       | TK | ------------- | ------------- |
+| Gold          | TK | ------------- | ------------- |
+| USD Index     | TK | ------------- | ------------- |
+| 10-yr U.S.<br> Treasury Yield | TK | ------------- | ------------- |
+
 
 ### Looking Ahead
 
+- TK
 - TK
 - TK
 
