Writethrough + adding prelim stats in market snapshot

--- a/2025/2025-05-25-wir.md
+++ b/2025/2025-05-25-wir.md
@@ -1,8 +1,8 @@
 # tktk
 ## tktk
 
-![Black-and-white photo illustration of a woman reading a newspaper](https://w3w.news/img/newsreader-illo-melpo-tsiliaki-DALLE3-1920.jpg)
-*Photo illustration by Melpo Tsiliaki × DALL·E 3*
+![A pair of dice being rolled](https://images.unsplash.com/photo-1605870445919-838d190e8e1b?q=80&w=3272&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+*Photo by Edge2Edge Media on Unsplash*
 
 <hr>
 
@@ -16,6 +16,14 @@
 
 **Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
 
+<!--
+
+Riff on ER doc's post in Salon about embracing more uncertainty and probabilistic thinking, including regarding AI: https://www.salon.com/2025/05/20/dont-fight-uncertainty--embrace-it/
+
+
+-->
+
+
  <hr>
 
  [![affiliate banner ad](https://w3w.news/img/affiliate-kz-letter.png)](
@@ -27,39 +35,44 @@
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Coinbase "reversed" a bounty on hackers seeking user data.
+- Bitcoin set a new all-time high. https://www.cnbc.com/2025/05/21/crypto-market-today.html | Moody's [downgrade of U.S. Treasury debt](https://www.cnbc.com/2025/05/16/moodys-downgrades-united-states-credit-rating-on-increase-in-government-debt.html) late last week helped whet investors' appetite for safe havens not tied to U.S. | https://decrypt.co/321376/bitcoin-etfs-add-1-billion-2-days-amid-record-btc-price | Texas bitcoin reserve bill: https://decrypt.co/321249/texas-house-advances-bitcoin-reserve-bill-bipartisan-backing | https://decrypt.co/321249/texas-house-advances-bitcoin-reserve-bill-bipartisan-backing | https://www.theblock.co/post/353833/bitcoin-hits-new-all-time-high-as-risk-assets-rebound-from-april-lows | https://www.theblock.co/post/355278/texas-bitcoin-bill-passes-and-will-likely-be-signed-by-governor-abbott-says-advocate
 
-- TK
+- **Coinbase replaced Discover in the S&P 500.** The update marked the first time a crypto company has been included in the U.S. stock market's benchmark index. ([MarketWatch](https://www.marketwatch.com/story/the-wait-is-over-coinbase-is-finally-joining-the-s-p-500-index-e004630b)) <!-- Need a new link --> Separately, the exchange turned the tables on hackers  "reversed" a bounty on hackers seeking user data. https://decrypt.co/321312/coinbase-data-breach-69461-users-december
 
-- TK
+- Trump crypto dinner update. <!-- Link TK after Thursday event --> Ahead of the event, on-chain data suggested that most of the attendees wwould be foreigners, many of whom bought their tokens on platforms that are closed to U.S. customers due to federal regulations. ([CNBC](https://www.cnbc.com/2025/05/18/trump-coin-dinner-to-include-mostly-non-americans-based-on-top-holders.html))
 
-- TK
+- Jonny Ive joined OpenAI: https://decrypt.co/321363/apple-design-legend-jony-ive-joins-openai
 
-- TK
+- Solana announced a new Seeker phone. https://decrypt.co/321360/why-solana-mobile-drop-token-seeker-phone | https://www.theblock.co/post/355238/solana-mobile-skr-token-seeker-shipping-date |
 
 ### Market Snapshot
 
+<!-- All numbers below are preliminary. Need updates after Friday's close on Wall Street... -->
+
 *A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, see the spreadsheet I use [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
 
-| Indicator     | Close         |  Weekly %     |  YTD %       
+| Indicator     | May 23 Close         |  Weekly %     |  YTD %       
 | ------------- | ------------- | ------------- | ------------- |
-| Bitcoin       | TK | ------------- | ------------- |
-| Nasdaq 100       | TK | ------------- | ------------- |
-| Gold          | TK | ------------- | ------------- |
-| USD Index     | TK | ------------- | ------------- |
-| 10-yr U.S.<br> Treasury Yield | TK | ------------- | ------------- |
+| Bitcoin       | $105,328.93 | +1.3% | +12.2% |
+| Nasdaq 100       | 21,344.00 | -0.4% | +1.6% |
+| Gold          | $3,284.20/oz | +3.2% | +24.9% |
+| USD Index     | 100.26 | -0.8% | -7.6% |
+| 10-yr U.S.<br> Treasury Yield | 4.487% | +0.046 | -0.086 |
 
 
 ### Looking Ahead
 
-- TK
-- TK
-- TK
+- Changes at the CFTC: https://www.theblock.co/post/355276/cftc-democratic-commissioner-kristin-johnson-plans-to-leave-marking-a-major-leadership-shakeup-at-the-agency
+
+- The 10-year anniversary of Trump's entry into presidential politics is approaching on June 16. https://money.cnn.com/2016/06/16/media/trump-announcement-one-year-later/index.html | Politico: China is more popular from the U.S. in global polling for the first time.
+
+- **It is now possible to make insect cyborgs** for tasks like military reconnaissance or exploring dangerous caves or contaminated nuclear sites. But there are massive ethical gray areas. ([Salon](https://www.salon.com/2025/05/13/we-can-turn-bugs-into-flying-crawling-robocops-does-that-mean-we-should/))
 
 ### Odds & Ends
 
-- TK
-- TK
+- **Venture giant a16z** recently did a handy [podcast episode](https://web3-with-a16z.simplecast.com/episodes/token-guide-crypto-JUFDm_Sn) about the basics of crypto tokens, different types, tokenomic models, and so on. A good resource for any crypto newbies about there looking for high-quality introductory info.
+
+- **Many bank ATMs still run Windows XP** -- a version of Microsoft's famed operating system that the company officially stopped supporting in 2014. Yikes. ([BBC](https://www.bbc.com/future/article/20250516-the-people-stuck-using-ancient-windows-computers))
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
