Adding some article links to news summaries...

--- a/2025/2025-05-25-wir.md
+++ b/2025/2025-05-25-wir.md
@@ -45,6 +45,14 @@ Riff on ER doc's post in Salon about embracing more uncertainty and probabilisti
 
 - Solana announced a new Seeker phone. https://decrypt.co/321360/why-solana-mobile-drop-token-seeker-phone | https://www.theblock.co/post/355238/solana-mobile-skr-token-seeker-shipping-date |
 
+- Bearish 20-year Treasury auction: https://www.wsj.com/finance/investing/global-stocks-markets-dow-news-05-21-2025-f2e9c9cc?st=Frj82n&reflink=desktopwebshare_permalink
+
+- Bitcoin Pizza Day is now a $1B affair. <!-- Link TK -->
+
+- New Hong Kong stablecoin law: https://decrypt.co/321516/hong-kong-passes-law-to-regulate-fiat-pegged-stablecoins
+
+- New data center city forming outside Reno. https://www.technologyreview.com/2025/05/22/1117300/the-download-the-desert-data-center-boom-and-how-to-measure-earths-elevations/
+
 ### Market Snapshot
 
 <!-- All numbers below are preliminary. Need updates after Friday's close on Wall Street... -->
