Adding final market snapshot data as of Friday's closes

--- a/2025/2025-05-25-wir.md
+++ b/2025/2025-05-25-wir.md
@@ -1,4 +1,4 @@
-# tktk
+# AI is in a hype cycle. Let's act like it.
 ## tktk
 
 ![A pair of dice being rolled](https://images.unsplash.com/photo-1605870445919-838d190e8e1b?q=80&w=3272&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
@@ -18,7 +18,10 @@
 
 <!--
 
-Riff on ER doc's post in Salon about embracing more uncertainty and probabilistic thinking, including regarding AI: https://www.salon.com/2025/05/20/dont-fight-uncertainty--embrace-it/
+- Riff on Ive/OpenAI partnership + ER doc's post in Salon about embracing more uncertainty and probabilistic thinking, including regarding AI: https://www.salon.com/2025/05/20/dont-fight-uncertainty--embrace-it/
+
+
+- WSJ coverage of the new partnership: https://www.wsj.com/tech/ai/what-sam-altman-told-openai-about-the-secret-device-hes-making-with-jony-ive-f1384005?st=ZAip6R&reflink=desktopwebshare_permalink
 
 
 -->
@@ -39,7 +42,7 @@ Riff on ER doc's post in Salon about embracing more uncertainty and probabilisti
 
 - **Coinbase replaced Discover in the S&P 500.** The update marked the first time a crypto company has been included in the U.S. stock market's benchmark index. ([MarketWatch](https://www.marketwatch.com/story/the-wait-is-over-coinbase-is-finally-joining-the-s-p-500-index-e004630b)) <!-- Need a new link --> Separately, the exchange turned the tables on hackers  "reversed" a bounty on hackers seeking user data. https://decrypt.co/321312/coinbase-data-breach-69461-users-december
 
-- Trump crypto dinner update. <!-- Link TK after Thursday event --> Ahead of the event, on-chain data suggested that most of the attendees wwould be foreigners, many of whom bought their tokens on platforms that are closed to U.S. customers due to federal regulations. ([CNBC](https://www.cnbc.com/2025/05/18/trump-coin-dinner-to-include-mostly-non-americans-based-on-top-holders.html))
+- Trump crypto dinner update. <!-- Link TK after Thursday event --> Ahead of the event, on-chain data suggested that most of the attendees wwould be foreigners, many of whom bought their tokens on platforms that are closed to U.S. customers due to federal regulations. ([CNBC](https://www.cnbc.com/2025/05/18/trump-coin-dinner-to-include-mostly-non-americans-based-on-top-holders.html)) | The 10-year anniversary of Trump's entry into presidential politics is approaching on June 16. https://money.cnn.com/2016/06/16/media/trump-announcement-one-year-later/index.html | Politico: China is more popular from the U.S. in global polling for the first time.
 
 - Jonny Ive joined OpenAI: https://decrypt.co/321363/apple-design-legend-jony-ive-joins-openai
 
@@ -55,24 +58,21 @@ Riff on ER doc's post in Salon about embracing more uncertainty and probabilisti
 
 ### Market Snapshot
 
-<!-- All numbers below are preliminary. Need updates after Friday's close on Wall Street... -->
-
-*A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, see the spreadsheet I use [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
+*A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, including additional indexes and asset classes, see my spreadsheet [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
 
 | Indicator     | May 23 Close         |  Weekly %     |  YTD %       
 | ------------- | ------------- | ------------- | ------------- |
-| Bitcoin       | $105,328.93 | +1.3% | +12.2% |
-| Nasdaq 100       | 21,344.00 | -0.4% | +1.6% |
-| Gold          | $3,284.20/oz | +3.2% | +24.9% |
-| USD Index     | 100.26 | -0.8% | -7.6% |
-| 10-yr U.S.<br> Treasury Yield | 4.487% | +0.046 | -0.086 |
+| Bitcoin       | $108,354.17 | +4.2% | +15.5% |
+| Nasdaq 100       | 20,915.65 | -2.4% | -0.5% |
+| Gold          | $3,358.40/oz | +5.5% | +27.7% |
+| USD Index     | 99.11 | -2% | -8.6% |
+| 10-yr U.S.<br> Treasury Yield | 4.5090% | +0.068 | -0.064 |
 
 
 ### Looking Ahead
 
 - Changes at the CFTC: https://www.theblock.co/post/355276/cftc-democratic-commissioner-kristin-johnson-plans-to-leave-marking-a-major-leadership-shakeup-at-the-agency
 
-- The 10-year anniversary of Trump's entry into presidential politics is approaching on June 16. https://money.cnn.com/2016/06/16/media/trump-announcement-one-year-later/index.html | Politico: China is more popular from the U.S. in global polling for the first time.
 
 - **It is now possible to make insect cyborgs** for tasks like military reconnaissance or exploring dangerous caves or contaminated nuclear sites. But there are massive ethical gray areas. ([Salon](https://www.salon.com/2025/05/13/we-can-turn-bugs-into-flying-crawling-robocops-does-that-mean-we-should/))
 
