Writing through news summaries myself

--- a/2025/2025-05-25-wir.md
+++ b/2025/2025-05-25-wir.md
@@ -60,7 +60,7 @@
 
 *A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, including additional indexes and asset classes, see my spreadsheet [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
 
-| Indicator     | May 23 Close         |  Weekly %     |  YTD %       
+| Indicator     | Friday         |  Weekly %     |  YTD %       
 | ------------- | ------------- | ------------- | ------------- |
 | Bitcoin       | $108,354.17 | +4.2% | +15.5% |
 | Nasdaq 100       | 20,915.65 | -2.4% | -0.5% |
@@ -71,14 +71,15 @@
 
 ### Looking Ahead
 
-- Changes at the CFTC: https://www.theblock.co/post/355276/cftc-democratic-commissioner-kristin-johnson-plans-to-leave-marking-a-major-leadership-shakeup-at-the-agency
+- **The Commodity Futures Trading Commission,** which plays an important role in U.S. crypto oversight, is undergoing a major leadership transition. On Wednesday, Commissioner Kristin Johnson became the fourth member of the Washington agency's five-member board to [announce plans](https://www.theblock.co/post/355276/cftc-democratic-commissioner-kristin-johnson-plans-to-leave-marking-a-major-leadership-shakeup-at-the-agency) to leave, effective at year end. In addition, Commissioner Summer Mersinger is set to leave Friday [to lead the Blockchain Association](https://decrypt.co/319788/cftc-commissioner-mersinger-lead-crypto-lobbying-firm), an industry lobbying group. President Trump has nominated Brian Quintenz, who formerly led venture firm a16z's crypto policy team, to become the new CFTC chair. But there is no timetable yet for his Senate confirmation vote. Hmmmm...
 
+- **Sesame Street is moving from Max to Netflix.** The new deal will also expedite distribution of free episodes of the venerable children's show via public broadcasting outlets in the U.S. ([NPR](https://www.npr.org/2025/05/19/nx-s1-5403663/sesame-street-netflix-pbs)) 
 
 - **It is now possible to make insect cyborgs** for tasks like military reconnaissance or exploring dangerous caves or contaminated nuclear sites. But there are massive ethical gray areas. ([Salon](https://www.salon.com/2025/05/13/we-can-turn-bugs-into-flying-crawling-robocops-does-that-mean-we-should/))
 
 ### Odds & Ends
 
-- **Venture giant a16z** recently did a handy [podcast episode](https://web3-with-a16z.simplecast.com/episodes/token-guide-crypto-JUFDm_Sn) about the basics of crypto tokens, different types, tokenomic models, and so on. A good resource for any crypto newbies about there looking for high-quality introductory info.
+- **ICYMI:** a16z recently did a handy [podcast episode](https://web3-with-a16z.simplecast.com/episodes/token-guide-crypto-JUFDm_Sn) about the basics of crypto tokens, different types, tokenomic models, and so on. A good resource for any crypto newbies about there looking for high-quality introductory info.
 
 - **Many bank ATMs still run Windows XP** -- a version of Microsoft's famed operating system that the company officially stopped supporting in 2014. Yikes. ([BBC](https://www.bbc.com/future/article/20250516-the-people-stuck-using-ancient-windows-computers))
 
