Writing through news summaries myself

--- a/2025/2025-05-25-wir.md
+++ b/2025/2025-05-25-wir.md
@@ -16,16 +16,11 @@
 
 **Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
 
-<!--
+- ER doc's post in Salon about embracing more uncertainty and probabilistic thinking, including regarding AI: https://www.salon.com/2025/05/20/dont-fight-uncertainty--embrace-it/
 
-- Riff on Ive/OpenAI partnership + ER doc's post in Salon about embracing more uncertainty and probabilistic thinking, including regarding AI: https://www.salon.com/2025/05/20/dont-fight-uncertainty--embrace-it/
+- WSJ coverage of the new Ive/OpenAI partnership: https://www.wsj.com/tech/ai/what-sam-altman-told-openai-about-the-secret-device-hes-making-with-jony-ive-f1384005?st=ZAip6R&reflink=desktopwebshare_permalink
 
-
-- WSJ coverage of the new partnership: https://www.wsj.com/tech/ai/what-sam-altman-told-openai-about-the-secret-device-hes-making-with-jony-ive-f1384005?st=ZAip6R&reflink=desktopwebshare_permalink
-
-
--->
-
+- Jonny Ive joined OpenAI: https://decrypt.co/321363/apple-design-legend-jony-ive-joins-openai
 
  <hr>
 
@@ -38,23 +33,19 @@
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Bitcoin set a new all-time high. https://www.cnbc.com/2025/05/21/crypto-market-today.html | Moody's [downgrade of U.S. Treasury debt](https://www.cnbc.com/2025/05/16/moodys-downgrades-united-states-credit-rating-on-increase-in-government-debt.html) late last week helped whet investors' appetite for safe havens not tied to U.S. | https://decrypt.co/321376/bitcoin-etfs-add-1-billion-2-days-amid-record-btc-price | Texas bitcoin reserve bill: https://decrypt.co/321249/texas-house-advances-bitcoin-reserve-bill-bipartisan-backing | https://decrypt.co/321249/texas-house-advances-bitcoin-reserve-bill-bipartisan-backing | https://www.theblock.co/post/353833/bitcoin-hits-new-all-time-high-as-risk-assets-rebound-from-april-lows | https://www.theblock.co/post/355278/texas-bitcoin-bill-passes-and-will-likely-be-signed-by-governor-abbott-says-advocate
+- Bitcoin set a new all-time high. https://www.cnbc.com/2025/05/21/crypto-market-today.html | Moody's [downgrade of U.S. Treasury debt](https://www.cnbc.com/2025/05/16/moodys-downgrades-united-states-credit-rating-on-increase-in-government-debt.html) late last week helped whet investors' appetite for safe havens not tied to U.S. | https://decrypt.co/321376/bitcoin-etfs-add-1-billion-2-days-amid-record-btc-price | Texas bitcoin reserve bill: https://decrypt.co/321249/texas-house-advances-bitcoin-reserve-bill-bipartisan-backing | https://decrypt.co/321249/texas-house-advances-bitcoin-reserve-bill-bipartisan-backing | https://www.theblock.co/post/353833/bitcoin-hits-new-all-time-high-as-risk-assets-rebound-from-april-lows | https://www.theblock.co/post/355278/texas-bitcoin-bill-passes-and-will-likely-be-signed-by-governor-abbott-says-advocate | Bitcoin Pizza Day is now a $1B affair. <!-- Link TK --> | Bearish 20-year Treasury auction: https://www.wsj.com/finance/investing/global-stocks-markets-dow-news-05-21-2025-f2e9c9cc?st=Frj82n&reflink=desktopwebshare_permalink
 
-- **Coinbase replaced Discover in the S&P 500.** The update marked the first time a crypto company has been included in the U.S. stock market's benchmark index. ([MarketWatch](https://www.marketwatch.com/story/the-wait-is-over-coinbase-is-finally-joining-the-s-p-500-index-e004630b)) <!-- Need a new link --> Separately, the exchange turned the tables on hackers  "reversed" a bounty on hackers seeking user data. https://decrypt.co/321312/coinbase-data-breach-69461-users-december
+- **Coinbase replaced Discover in the S&P 500.** The update marks [the first time](https://www.latimes.com/business/story/2025-05-19/coinbase-becomes-first-crypto-company-to-join-the-s-p-500-after-rocky-week) a crypto platform has been included in the U.S. stock market's benchmark index... Separately, Coinbase [turned the tables](https://www.msn.com/en-us/money/technology/coinbase-puts-20-million-bounty-on-crooks-who-tried-to-extort-firm-over-stolen-customer-data/ar-AA1EORsm?ocid=TobArticle) on hackers demanding $20 million for the return of stolen user data. Instead, the exchange is offering the same sum for information leading to arrest and conviction of the hackers.
 
 - Trump crypto dinner update. <!-- Link TK after Thursday event --> Ahead of the event, on-chain data suggested that most of the attendees wwould be foreigners, many of whom bought their tokens on platforms that are closed to U.S. customers due to federal regulations. ([CNBC](https://www.cnbc.com/2025/05/18/trump-coin-dinner-to-include-mostly-non-americans-based-on-top-holders.html)) | The 10-year anniversary of Trump's entry into presidential politics is approaching on June 16. https://money.cnn.com/2016/06/16/media/trump-announcement-one-year-later/index.html | Politico: China is more popular from the U.S. in global polling for the first time.
 
-- Jonny Ive joined OpenAI: https://decrypt.co/321363/apple-design-legend-jony-ive-joins-openai
 
 - Solana announced a new Seeker phone. https://decrypt.co/321360/why-solana-mobile-drop-token-seeker-phone | https://www.theblock.co/post/355238/solana-mobile-skr-token-seeker-shipping-date |
 
-- Bearish 20-year Treasury auction: https://www.wsj.com/finance/investing/global-stocks-markets-dow-news-05-21-2025-f2e9c9cc?st=Frj82n&reflink=desktopwebshare_permalink
 
-- Bitcoin Pizza Day is now a $1B affair. <!-- Link TK -->
 
 - New Hong Kong stablecoin law: https://decrypt.co/321516/hong-kong-passes-law-to-regulate-fiat-pegged-stablecoins
 
-- New data center city forming outside Reno. https://www.technologyreview.com/2025/05/22/1117300/the-download-the-desert-data-center-boom-and-how-to-measure-earths-elevations/
 
 ### Market Snapshot
 
@@ -73,7 +64,7 @@
 
 - **The Commodity Futures Trading Commission,** which plays an important role in U.S. crypto oversight, is undergoing a major leadership transition. On Wednesday, Commissioner Kristin Johnson became the fourth member of the Washington agency's five-member board to [announce plans](https://www.theblock.co/post/355276/cftc-democratic-commissioner-kristin-johnson-plans-to-leave-marking-a-major-leadership-shakeup-at-the-agency) to leave, effective at year end. In addition, Commissioner Summer Mersinger is set to leave Friday [to lead the Blockchain Association](https://decrypt.co/319788/cftc-commissioner-mersinger-lead-crypto-lobbying-firm), an industry lobbying group. President Trump has nominated Brian Quintenz, who formerly led venture firm a16z's crypto policy team, to become the new CFTC chair. But there is no timetable yet for his Senate confirmation vote. Hmmmm...
 
-- **Sesame Street is moving from Max to Netflix.** The new deal will also expedite distribution of free episodes of the venerable children's show via public broadcasting outlets in the U.S. ([NPR](https://www.npr.org/2025/05/19/nx-s1-5403663/sesame-street-netflix-pbs)) 
+- **Sesame Street is moving from Max to Netflix.** The new deal will also expedite distribution of free episodes of the venerable children's show via public broadcasting outlets in the U.S. ([NPR](https://www.npr.org/2025/05/19/nx-s1-5403663/sesame-street-netflix-pbs))
 
 - **It is now possible to make insect cyborgs** for tasks like military reconnaissance or exploring dangerous caves or contaminated nuclear sites. But there are massive ethical gray areas. ([Salon](https://www.salon.com/2025/05/13/we-can-turn-bugs-into-flying-crawling-robocops-does-that-mean-we-should/))
 
