Fleshing out "Five Things" summary items with some help from Leo/Llama 3.1 8B

--- a/2025/2025-05-25-wir.md
+++ b/2025/2025-05-25-wir.md
@@ -33,19 +33,15 @@
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Bitcoin set a new all-time high. https://www.cnbc.com/2025/05/21/crypto-market-today.html | Moody's [downgrade of U.S. Treasury debt](https://www.cnbc.com/2025/05/16/moodys-downgrades-united-states-credit-rating-on-increase-in-government-debt.html) late last week helped whet investors' appetite for safe havens not tied to U.S. | https://decrypt.co/321376/bitcoin-etfs-add-1-billion-2-days-amid-record-btc-price | Texas bitcoin reserve bill: https://decrypt.co/321249/texas-house-advances-bitcoin-reserve-bill-bipartisan-backing | https://decrypt.co/321249/texas-house-advances-bitcoin-reserve-bill-bipartisan-backing | https://www.theblock.co/post/353833/bitcoin-hits-new-all-time-high-as-risk-assets-rebound-from-april-lows | https://www.theblock.co/post/355278/texas-bitcoin-bill-passes-and-will-likely-be-signed-by-governor-abbott-says-advocate | Bitcoin Pizza Day is now a $1B affair. <!-- Link TK --> | Bearish 20-year Treasury auction: https://www.wsj.com/finance/investing/global-stocks-markets-dow-news-05-21-2025-f2e9c9cc?st=Frj82n&reflink=desktopwebshare_permalink
+- **Bitcoin set a new all-time high** near $112,000 per token [on Thursday](https://uk.finance.yahoo.com/news/bitcoin-price-all-time-high-crypto-093320602.html). Prices have since retreated slightly, but there is no denying crypto remains in a renewed bull run for now, led by BTC. The original cryptocurrency has benefited recently from heavy institutional buying and increased investor appetite for havens aside from the dollar and [U.S. Treasury bonds](https://www.wsj.com/finance/investing/global-stocks-markets-dow-news-05-21-2025-f2e9c9cc?st=Frj82n&reflink=desktopwebshare_permalink)... Coincidentally, Thursday's new record price fell on Bitcoin Pizza Day, the anniversary of one of the earliest bitcoin transactions, in 2010. At the time, developer Laszlo Hanyecz [paid 10,000 BTC](https://www.forbes.com/sites/colinharper/2025/05/22/the-man-behind-bitcoin-pizza-day-spent-more-bitcoin-than-you-think/) for two pizzas from Papa John's. Those tokens would now be worth over $1 billion.
 
 - **Coinbase replaced Discover in the S&P 500.** The update marks [the first time](https://www.latimes.com/business/story/2025-05-19/coinbase-becomes-first-crypto-company-to-join-the-s-p-500-after-rocky-week) a crypto platform has been included in the U.S. stock market's benchmark index... Separately, Coinbase [turned the tables](https://www.msn.com/en-us/money/technology/coinbase-puts-20-million-bounty-on-crooks-who-tried-to-extort-firm-over-stolen-customer-data/ar-AA1EORsm?ocid=TobArticle) on hackers demanding $20 million for the return of stolen user data. Instead, the exchange is offering the same sum for information leading to arrest and conviction of the hackers.
 
-- Trump crypto dinner update. <!-- Link TK after Thursday event --> Ahead of the event, on-chain data suggested that most of the attendees wwould be foreigners, many of whom bought their tokens on platforms that are closed to U.S. customers due to federal regulations. ([CNBC](https://www.cnbc.com/2025/05/18/trump-coin-dinner-to-include-mostly-non-americans-based-on-top-holders.html)) | The 10-year anniversary of Trump's entry into presidential politics is approaching on June 16. https://money.cnn.com/2016/06/16/media/trump-announcement-one-year-later/index.html | Politico: China is more popular from the U.S. in global polling for the first time.
+- US President Trump hosted an exclusive dinner for the largest holders of his meme coin, Official Trump, at his golf club in Virginia, sparking ethics concerns. The event has raised questions about the intersection of politics and cryptocurrency, with the top 220 holders reportedly spending over $140 million to secure a spot at the dinner. https://www.axios.com/2025/05/22/trump-meme-coin-dinner | A recent gala hosted by President Donald Trump for top buyers of his $TRUMP meme coin has raised concerns among lawmakers and regulators, threatening to derail stablecoin legislation. The event, which saw a 16% drop in the coin's value the next morning, has sparked protests and calls for a ban on presidents profiting from crypto ventures while in office, putting a bipartisan bill at risk of stalling. https://www.cnbc.com/2025/05/23/trump-meme-coin-dinner.html <!-- Draft summaries by Leo/Llama 3.1 8B-->
 
+- Solana Mobile has unveiled plans to launch its own token, SKR, and introduce its decentralized architecture, TEEPIN, which will support its expansion to more hardware makers and decentralize its web3 ecosystem. The company also confirmed a shipping date of August 4 for its second crypto smartphone, "Seeker," which has already seen over 150,000 units presold across 57 countries. https://www.theblock.co/post/355238/solana-mobile-skr-token-seeker-shipping-date | Solana Mobile is set to launch a new token, SKR, to fuel its decentralized mobile ecosystem, which will be rooted in the layer-1 blockchain. The token will be used to coordinate growth and change within the ecosystem, and will be earned by builders and users for participation, with the goal of creating a decentralized mobile platform that is open to additional hardware manufacturers. https://decrypt.co/321360/why-solana-mobile-drop-token-seeker-phone <!-- Draft summaries by Leo/Llama 3.1 8B-->
 
-- Solana announced a new Seeker phone. https://decrypt.co/321360/why-solana-mobile-drop-token-seeker-phone | https://www.theblock.co/post/355238/solana-mobile-skr-token-seeker-shipping-date |
-
-
-
-- New Hong Kong stablecoin law: https://decrypt.co/321516/hong-kong-passes-law-to-regulate-fiat-pegged-stablecoins
-
+- Hong Kong has passed a law requiring stablecoin issuers to obtain a license from the Hong Kong Monetary Authority, aiming to balance innovation and investor protection in the city's growing digital asset market. The new law introduces a licensing regime for stablecoin issuers, covering reserve asset management, redemption, and anti-money laundering controls, and is expected to come into effect later this year. https://decrypt.co/321516/hong-kong-passes-law-to-regulate-fiat-pegged-stablecoins <!-- Draft summaries by Leo/Llama 3.1 8B-->
 
 ### Market Snapshot
 
